--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -148,7 +148,7 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" id="templ_global" name="templ_global" {% if templ_details['owner'] == 0 %}checked{% endif %}>
                             <label for="templ_global" class="form-check-label">
-                                {% trans %}Everyone could use it (global)?{% endtrans %}</label>
+                                {% trans %}Global template{% endtrans %}</label>
                         </div>
                         <small class="form-text text-muted">{% trans %}Make this template available to all users{% endtrans %}</small>
                     </div>
