--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -185,11 +185,11 @@
             </button>
             {% endif %}
             <a href="index.php?page=edit&id={{ zone_id }}&export_csv=1" class="btn btn-secondary btn-sm">
-                <i class="bi bi-file-earmark-spreadsheet me-1 text-white"></i>{% trans %}Export CSV{% endtrans %}
+                <i class="bi bi-file-earmark-spreadsheet me-1 text-white"></i>{% trans %}CSV{% endtrans %}
             </a>
             {% if not is_reverse_zone and perm_edit != "none" %}
             <a href="index.php?page=batch_ptr_record&id={{ zone_id }}" class="btn btn-secondary btn-sm">
-                <i class="bi bi-arrow-repeat me-1 text-white"></i>{% trans %}Batch PTR Records{% endtrans %}
+                <i class="bi bi-arrow-repeat me-1 text-white"></i>{% trans %}PTR{% endtrans %}
             </a>
             {% endif %}
             {% if perm_is_godlike and whois_enabled %}
@@ -202,6 +202,12 @@
             <a href="index.php?page=dnssec&id={{ zone_id }}" class="btn btn-secondary btn-sm">
                 <i class="bi bi-shield-lock me-1 text-white"></i>{% trans %}DNSSEC{% endtrans %}
             </a>
+            {% else %}
+                {% if perm_edit != "none" %}
+                <button class="btn btn-secondary btn-sm" type="submit" form="edit-zone-form" name="sign_zone">
+                    <i class="bi bi-shield-check me-1 text-white"></i>{% trans %}Sign zone{% endtrans %}
+                </button>
+                {% endif %}
             {% endif %}
             {% endif %}
         </div>
@@ -483,7 +489,7 @@
                 </table>
             </div>
 
-            <div class="py-3">
+            <div>
                 {{ pagination | raw }}
             </div>
 
@@ -497,18 +503,6 @@
     <button class="btn btn-secondary btn-sm" type="reset" name="reset">
         <i class="bi bi-arrow-counterclockwise me-1 text-white"></i>{% trans %}Reset{% endtrans %}
     </button>
-
-    {% if pdnssec_use %}
-    {% if is_secured %}
-    <button class="btn btn-secondary btn-sm" type="submit" name="unsign_zone">
-        <i class="bi bi-shield-x me-1 text-white"></i>{% trans %}Unsign this zone{% endtrans %}
-    </button>
-    {% else %}
-    <button class="btn btn-secondary btn-sm" type="submit" name="sign_zone">
-        <i class="bi bi-shield-check me-1 text-white"></i>{% trans %}Sign this zone{% endtrans %}
-    </button>
-    {% endif %}
-    {% endif %}
 </div>
 {% endif %}
 </form>
