--- a/templates/default/search.html
+++ b/templates/default/search.html
@@ -64,7 +64,7 @@
             
             <!-- Search options -->
             <div class="mb-2" id="advancedSearchOptions">
-                <div class="card card-body py-2 bg-light border">
+                <div class="card card-body py-2 border">
                     <div class="row g-2">
                         <!-- Search options in first row -->
                         <div class="col-md-6">
