--- a/templates/default/add_record.html
+++ b/templates/default/add_record.html
@@ -166,11 +166,11 @@
         if (priorityInput) {
             if (supportsPriority(recordType)) {
                 priorityInput.removeAttribute('readonly');
-                priorityInput.classList.remove('bg-light');
+                priorityInput.classList.remove('bg-dark-subtle');
                 priorityInput.setAttribute('tabindex', '0');
             } else {
                 priorityInput.setAttribute('readonly', 'readonly');
-                priorityInput.classList.add('bg-light');
+                priorityInput.classList.add('bg-dark-subtle');
                 priorityInput.value = '0';
                 priorityInput.setAttribute('tabindex', '-1');
             }
