locale(de_DE): added msgid "Template name" to messages.po, because edit.html used msgid "Name" as subject for hostname, list_zone_templ.html and edit_zone_templ.html as subject for template name.

--- a/templates/default/list_zone_templ.html
+++ b/templates/default/list_zone_templ.html
@@ -16,7 +16,7 @@
                 <thead class="table-light">
                 <tr>
                     <th>{% trans %}In use{% endtrans%}</th>
-                    <th>{% trans %}Name{% endtrans %}</th>
+                    <th>{% trans %}Template name{% endtrans %}</th>
                     <th>{% trans %}Description{% endtrans %}</th>
                     <th>{% trans %}Owner{% endtrans %}</th>
                     <th>{% trans %}Type{% endtrans %}</th>
