--- a/templates/default/edit_zone_templ.html
+++ b/templates/default/edit_zone_templ.html
@@ -129,7 +129,7 @@
                     <input type="hidden" name="_token" value="{{ csrf_token }}">
 
                     <div class="mb-3">
-                        <label for="templ_name" class="form-label">{% trans %}Name{% endtrans %}</label>
+                        <label for="templ_name" class="form-label">{% trans %}Template name{% endtrans %}</label>
                         <input class="form-control form-control-sm" type="text" id="templ_name" name="templ_name"
                                value="{{templ_details['name']}}" required>
                         <div class="invalid-feedback">{% trans %}Provide a name for your template{% endtrans %}</div>
