--- a/templates/default/pdns_status.html
+++ b/templates/default/pdns_status.html
@@ -55,6 +55,10 @@
                         <table class="table table-hover">
                             <tbody>
                                 <tr>
+                                    <th scope="row">{% trans %}PDNS Server{% endtrans %}</th>
+                                    <td>{{ server_status.display_name }}</td>
+                                </tr>
+                                <tr>
                                     <th scope="row">{% trans %}Server Name{% endtrans %}</th>
                                     <td>{{ server_status.server_name }}</td>
                                 </tr>
